fixed spacing

--- a/src/Home/Home.scss
+++ b/src/Home/Home.scss
@@ -97,7 +97,7 @@
     
     .about-education, .about-interests, .about-experience{
         font-family: 'Overpass', sans-serif;
-        padding: 20px 0 20px 0;
+        padding: 50px 0 50px 0;
         flex-direction: column;
         h2{
             font-size: 2.4vw;
